--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,6 @@ before_script: pip install docker-compose
 
 script:
   - docker-compose run app sh -c "python manage.py test && flake8"
+
+notifications:
+  slack: jojin:duhcRiL23A3fwgZSkffV2dX7
